# resuma

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  deny.toml  fly.toml  package-lock.json  package.json
benchmark/leptos-counter/: Cargo.toml
benchmark/leptos-counter/src/: lib.rs
crates/resuma/: Cargo.toml
crates/resuma-cli/: Cargo.toml  README.md
crates/resuma-cli/src/: lib.rs  main.rs  scaffold.rs
crates/resuma-cli/templates/todo/: main.rs  todo_store.rs
crates/resuma-core/: Cargo.toml  README.md
crates/resuma-core/src/: app_context.rs  component.rs  context.rs  effect.rs  error.rs  flow_request.rs  handler.rs  handler_combine.rs  lib.rs  nav.rs  portal.rs  serialize.rs  signal.rs  slot.rs  store.rs  stream.rs  task.rs  theme.rs  view.rs  view_transition.rs
crates/resuma-flow/: Cargo.toml  README.md
crates/resuma-flow/src/: action_hook.rs  app.rs  errors.rs  form.rs  layout.rs  lib.rs  load.rs  match_route.rs  middleware.rs  pages.rs  pwa.rs  registry.rs  request.rs  routes.rs  runtime.rs  stream_load.rs  submit.rs
crates/resuma-flow/src/components/: event_stream.rs  flow_dashboard.rs  flow_execution.rs  flow_graph.rs  mod.rs  styles.rs  worker_panel.rs
crates/resuma-macros/: Cargo.toml  README.md
crates/resuma-macros/src/: component_macro.rs  computed_macro.rs  debounce_macro.rs  effect_macro.rs  extract_codegen.rs  island_macro.rs  js_macro.rs  layout_macro.rs  lib.rs  load_macro.rs  middleware_macro.rs  server_macro.rs  store_macro.rs  submit_macro.rs  upload_macro.rs  view_macro.rs  worker_macro.rs
crates/resuma-macros/src/rs2js/: error.rs  mod.rs
crates/resuma-router/: Cargo.toml  README.md
crates/resuma-router/src/: lib.rs
crates/resuma-rs2js/: Cargo.toml  README.md
crates/resuma-rs2js/src/: lib.rs
crates/resuma-server/: Cargo.toml  README.md
crates/resuma-server/assets/: core.js  loader.js  runtime.js  runtime.js.map
crates/resuma-server/src/: actions.rs  app.rs  compressed_asset.rs  deferred_stream.rs  handlers.rs  lib.rs  page_cache.rs  request_path.rs  runtime_asset.rs  security.rs
crates/resuma-ssr/: Cargo.toml  README.md
crates/resuma-ssr/src/: escape.rs  lib.rs  pwa.rs  seo.rs  stream.rs
crates/resuma/assets/: core.js  flow.css  flow.js  loader.js  runtime.js  runtime.js.map
crates/resuma/src/: lib.rs
crates/resuma/src/cli/: add.rs  doctor.rs  install.rs  mod.rs  prompt.rs  scaffold.rs  update.rs
crates/resuma/src/client/: mod.rs
crates/resuma/src/core/: app_context.rs  component.rs  context.rs  effect.rs  error.rs  flow_request.rs  for_list.rs  handler.rs  match_branch.rs  mod.rs  nav.rs  portal.rs  serialize.rs  show.rs  signal.rs  slot.rs  store.rs  stream.rs  task.rs  theme.rs  view.rs  view_transition.rs
crates/resuma/src/exec/: actions.rs  artifacts.rs  cancel.rs  config.rs  cron.rs  durable.rs  engine.rs  events.rs  graph.rs  id.rs  metrics.rs  mod.rs  node.rs  planner.rs  queue.rs  queue_disk.rs  resources.rs  routes.rs  runner.rs  runtime.rs  scheduler.rs  security.rs  ssrf.rs  state.rs  status.rs  tests.rs  tools.rs  types.rs  uploads.rs  webhooks.rs  workers.rs
crates/resuma/src/flow/: action_hook.rs  app.rs  cache.rs  cookie.rs  errors.rs  extensions.rs  extract.rs  form.rs  invalidate.rs  layout.rs  load.rs  match_route.rs  middleware.rs  mod.rs  nav.rs  pages.rs  public.rs  pwa.rs  redirect.rs  registry.rs  request.rs  routes.rs  runtime.rs  stream_load.rs  submit.rs
crates/resuma/src/router/: mod.rs
crates/resuma/src/server/: actions.rs  app.rs  compressed_asset.rs  deferred_stream.rs  dev.rs  handler_assets.rs  island_cache.rs  limits.rs  listen.rs  mod.rs  ops.rs  page_cache.rs  rate_limit.rs  rate_limit_disk.rs  request_path.rs  runtime_asset.rs  security.rs  static_assets.rs
crates/resuma/src/ssr/: escape.rs  mod.rs  pwa.rs  seo.rs  seo_kit.rs  stream.rs
crates/resuma/templates/add/sqlx/: 001_users.sql  db.rs  env.example
crates/resuma/templates/add/turso/: env.example  turso.rs
crates/resuma/templates/flow/: main.rs
crates/resuma/templates/flow-booking/: booking_store.rs  main.rs
crates/resuma/templates/flow-booking/pages/: _registry.rs  book.rs  gracias.rs  index.rs  mod.rs
crates/resuma/templates/flow-fullstack/: db.rs  main.rs
crates/resuma/templates/flow-fullstack/pages/: _registry.rs  index.rs  mod.rs  users.rs
crates/resuma/templates/flow/pages/: _registry.rs  about.rs  index.rs  mod.rs
crates/resuma/templates/install/skill/: SKILL.md
crates/resuma/templates/production/: Dockerfile  env.example  fly.toml  main.rs  security.rs
crates/resuma/templates/production/pages/: _registry.rs  index.rs  mod.rs  ops.rs
crates/resuma/templates/todo/: main.rs  security.rs
crates/resuma/tests/: deferred_stream.rs  exec_http.rs  integration.rs  lazy_chunks.rs  ops_flow.rs  post_1_0.rs  reentrancy_repro.rs  security_http.rs  show_reactive.rs  static_assets.rs  store_for.rs
examples/e2e/: Cargo.toml
examples/e2e/src/: exec.rs  main.rs  workers.rs
examples/resuma-audit/: .env.example  .gitignore  Cargo.toml
examples/resuma-audit/migrations/: 001_todos.sql
examples/resuma-audit/public/: audit-results.json
examples/resuma-audit/scripts/: audit_interactive.md  audit_interactive.py  audit_smoke.py  package.json
examples/resuma-audit/src/: actions.rs  audit_shell.rs  db.rs  extensions_catalog.rs  image_service.rs  main.rs  platform.rs  security.rs  test_registry.rs  todo_store.rs
examples/resuma-audit/src/page_impls/: components.rs  cookbook.rs  flow.rs  integrations.rs  intro.rs  matrix.rs  mod.rs  reference.rs  security.rs
examples/resuma-audit/src/pages/: _layout.rs  _registry.rs  index.rs  mod.rs
examples/resuma-audit/src/pages/audit/components/: accessibility.rs  client.rs  clipboard.rs  context.rs  control_flow.rs  effects.rs  error_boundary.rs  form.rs  handlers.rs  index.rs  islands.rs  js.rs  nav_link.rs  picker.rs  server.rs  signals.rs  slots.rs  (+4 more)
examples/todo/: Cargo.toml
examples/todo/src/: main.rs  security.rs  todo_store.rs
(+215 files in other folders)
