[workspace]
resolver = "2"
members = [
    "crates/resuma-core",
    "crates/resuma-macros",
    "crates/resuma-ssr",
    "crates/resuma-server",
    "crates/resuma-router",
    "crates/resuma-rs2js",
    "crates/resuma-cli",
    "crates/resuma-flow",
    "crates/resuma",
    "examples/counter",
    "examples/todo",
    "examples/flow-demo",
    "examples/flow-pages",
    "examples/website",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Resuma Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/resuma/resuma"
description = "Resuma - The first Rust framework with SSR + Resumability + Islands + Server Actions + JS Bridge"
keywords = ["web", "framework", "ssr", "resumability", "islands"]

[workspace.dependencies]
# Workspace internal crates
resuma-core    = { path = "crates/resuma-core",    version = "0.1.0" }
resuma-macros  = { path = "crates/resuma-macros",  version = "0.1.0" }
resuma-ssr     = { path = "crates/resuma-ssr",     version = "0.1.0" }
resuma-server  = { path = "crates/resuma-server",  version = "0.1.0" }
resuma-router  = { path = "crates/resuma-router",  version = "0.1.0" }
resuma-rs2js   = { path = "crates/resuma-rs2js",   version = "0.1.0" }
resuma-flow    = { path = "crates/resuma-flow",    version = "0.1.0" }

# 3rd-party
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
axum        = "0.7"
tower       = "0.5"
tower-http  = { version = "0.6", features = ["fs", "trace"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
syn         = { version = "2", features = ["full", "extra-traits"] }
quote       = "1"
proc-macro2 = "1"
anyhow      = "1"
thiserror   = "1"
once_cell   = "1"
parking_lot = "0.12"
notify      = "6"
clap        = { version = "4", features = ["derive"] }
walkdir     = "2"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
