[workspace]
resolver = "2"
members = [
    "crates/resuma-core",
    "crates/resuma-macros",
    "crates/resuma-ssr",
    "crates/resuma-server",
    "crates/resuma-router",
    "crates/resuma-rs2js",
    "crates/resuma-cli",
    "crates/resuma-flow",
    "crates/resuma",
    "examples/counter",
    "examples/todo",
    "examples/flow-demo",
    "examples/flow-pages",
    "examples/website",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
authors = ["Resuma Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GolfredoPerezFernandez/resuma"
homepage = "https://github.com/GolfredoPerezFernandez/resuma"
documentation = "https://docs.rs/resuma"
description = "Resuma - SSR + Resumability + Islands + Server Actions for Rust"
keywords = ["web", "framework", "ssr", "resumability", "islands"]
categories = ["web-programming", "asynchronous"]
readme = "README.md"

[workspace.dependencies]
# Workspace internal crates (publish in dependency order — see docs/PUBLISHING.md)
resuma-rs2js   = { path = "crates/resuma-rs2js",   version = "0.1.1" }
resuma-core    = { path = "crates/resuma-core",    version = "0.1.1" }
resuma-macros  = { path = "crates/resuma-macros",  version = "0.1.1" }
resuma-ssr     = { path = "crates/resuma-ssr",     version = "0.1.1" }
resuma-router  = { path = "crates/resuma-router",  version = "0.1.1" }
resuma-server  = { path = "crates/resuma-server",  version = "0.1.1" }
resuma-flow    = { path = "crates/resuma-flow",    version = "0.1.1" }
resuma-cli     = { path = "crates/resuma-cli",     version = "0.1.1" }

# 3rd-party
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
axum        = "0.7"
tower       = "0.5"
tower-http  = { version = "0.6", features = ["fs", "trace"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
syn         = { version = "2", features = ["full", "extra-traits"] }
quote       = "1"
proc-macro2 = "1"
anyhow      = "1"
thiserror   = "1"
once_cell   = "1"
parking_lot = "0.12"
notify      = "6"
clap        = { version = "4", features = ["derive"] }
walkdir     = "2"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
