[workspace]
resolver = "2"
members = [
    "crates/resuma-macros",
    "crates/resuma",
    "crates/resuma-flow",
    "examples/counter",
    "examples/todo",
    "examples/flow-demo",
    "examples/flow-pages",
    "examples/e2e",
    "examples/resuma-audit",
]

[workspace.package]
version = "1.2.15"
edition = "2021"
rust-version = "1.91"
authors = ["Resuma Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GoldevLab/resuma"
homepage = "https://resuma-docs.fly.dev"
documentation = "https://resuma-docs.fly.dev/docs"
description = "Resuma: resumable SSR Rust web framework (not a CV app). Zero hydration, ~907 B loader, Axum, server actions, Flow."
keywords = ["web", "framework", "ssr", "resumability", "axum"]
categories = ["web-programming", "asynchronous"]
readme = "README.md"

[workspace.dependencies]
resuma-macros = { path = "crates/resuma-macros", version = "1.2.15" }
resuma = { path = "crates/resuma", version = "1.2.15" }
resuma-flow = { path = "crates/resuma-flow", version = "1.2.15" }

# 3rd-party
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.8", features = ["ws", "multipart"] }
tower       = { version = "0.5", features = ["util", "limit"] }
tower-http  = { version = "0.7", features = ["fs", "trace", "timeout"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
syn         = { version = "2", features = ["full", "extra-traits", "visit"] }
quote       = "1"
proc-macro2 = "1"
anyhow      = "1"
thiserror   = "2"
once_cell   = "1"
parking_lot = "0.12"
clap        = { version = "4", features = ["derive"] }
walkdir     = "2"
getrandom     = "0.4"
async-trait   = "0.1"
ctor          = "1.0"
futures-util  = { version = "0.3", default-features = false, features = ["std"] }
hmac          = "0.13"
sha2          = "0.11"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
