[package]
name = "resuma-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Resuma command-line interface — `resuma new`, `resuma dev`, `resuma build`."

[[bin]]
name = "resuma"
path = "src/main.rs"

[dependencies]
clap         = { workspace = true }
anyhow       = { workspace = true }
notify       = { workspace = true }
walkdir      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
resuma-router = { workspace = true }
