[package]
name = "resuma-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Resuma command-line interface — `resuma new`, `resuma dev`, `resuma build`."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true
include = ["src/**/*", "templates/**/*", "README.md", "Cargo.toml"]

[lib]
name = "resuma_cli"
path = "src/lib.rs"

[[bin]]
name = "resuma"
path = "src/main.rs"

[dependencies]
clap         = { workspace = true }
anyhow       = { workspace = true }
notify       = { workspace = true }
walkdir      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
resuma-router = { workspace = true }
