[package]
name = "resuma-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core primitives for Resuma: signals, effects, view tree, components"
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
parking_lot = { workspace = true }
once_cell   = { workspace = true }
thiserror   = { workspace = true }
