[package]
name = "resuma-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural macros for Resuma: view!, #[component], #[server], #[island], js!"

[lib]
proc-macro = true

[dependencies]
syn          = { workspace = true }
quote        = { workspace = true }
proc-macro2  = { workspace = true }
resuma-rs2js = { workspace = true }
