[package]
name = "resuma-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural macros for Resuma: view!, #[component], #[server], #[island], js!"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn          = { workspace = true }
quote        = { workspace = true }
proc-macro2  = { workspace = true }
resuma-rs2js = { workspace = true }
