[package]
name = "resuma-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File-based routing helpers for Resuma."

[dependencies]
resuma-core = { workspace = true }
walkdir     = { workspace = true }
serde       = { workspace = true }
