[package]
name = "resuma-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File-based routing helpers for Resuma."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
resuma-core = { workspace = true }
walkdir     = { workspace = true }
serde       = { workspace = true }
