[package]
name = "resuma-rs2js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Translates a safe subset of Rust expressions to JavaScript for Resuma's resumable event handlers"

[dependencies]
syn         = { workspace = true }
quote       = { workspace = true }
proc-macro2 = { workspace = true }
thiserror   = { workspace = true }
