[package]
name = "resuma-rs2js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Translates a safe subset of Rust expressions to JavaScript for Resuma's resumable event handlers"
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
syn         = { workspace = true }
quote       = { workspace = true }
proc-macro2 = { workspace = true }
thiserror   = { workspace = true }
