[package]
name = "resuma-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP server (axum) for Resuma. Serves SSR pages, server actions and the JS runtime."

[dependencies]
resuma-core   = { workspace = true }
resuma-ssr    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
axum          = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell     = { workspace = true }
parking_lot   = { workspace = true }
async-trait   = { workspace = true }
