[package]
name = "resuma-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP server (axum) for Resuma. Serves SSR pages, server actions and the JS runtime."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true
include = ["src/**/*", "assets/**/*", "README.md", "Cargo.toml"]

[dependencies]
resuma-core   = { workspace = true }
resuma-ssr    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
axum          = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = "1"
brotli = "7"
once_cell     = { workspace = true }
parking_lot   = { workspace = true }
futures-util = "0.3"
