[package]
name = "resuma-ssr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Server-side rendering engine for Resuma. Walks View trees, emits HTML, and embeds the resumability payload."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
resuma-core = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"
