[package]
name = "resuma"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Resuma — the first Rust framework with SSR + Resumability + Islands + Server Actions + JS Bridge. This is the umbrella crate users depend on."
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "resuma"
path = "src/bin/resuma.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:resuma-cli", "dep:anyhow"]

[dependencies]
resuma-core    = { workspace = true }
resuma-macros  = { workspace = true }
resuma-ssr     = { workspace = true }
resuma-server  = { workspace = true }
resuma-router  = { workspace = true }
resuma-flow    = { workspace = true }
resuma-cli     = { workspace = true, optional = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
ctor           = "0.2"
anyhow         = { workspace = true, optional = true }