[package]
name = "resuma"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Resuma — SSR + Resumability + Islands + Server Actions + JS Bridge for Rust"
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
include = [
    "src/**/*",
    "assets/**/*",
    "templates/**/*",
    "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "resuma"
path = "src/bin/resuma.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:anyhow", "dep:notify", "dep:walkdir", "dep:tracing-subscriber"]

[dependencies]
resuma-macros = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
axum          = { workspace = true, features = ["ws"] }
tower         = { workspace = true }
tower-http    = { workspace = true }
tracing       = { workspace = true }
once_cell     = { workspace = true }
parking_lot   = { workspace = true }
thiserror     = { workspace = true }
async-trait   = { workspace = true }
futures-util  = { version = "0.3", default-features = false, features = ["std"] }
async-stream  = "0.3"
serde_urlencoded = "0.7"
flate2        = "1"
brotli        = "7"
getrandom         = { workspace = true }
ctor              = { workspace = true }
# CLI (optional)
clap                = { workspace = true, optional = true }
anyhow              = { workspace = true, optional = true }
notify              = { workspace = true, optional = true }
walkdir             = { workspace = true, optional = true }
tracing-subscriber  = { workspace = true, optional = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
