[package]
name = "example-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "example-e2e"
path = "src/main.rs"

[dependencies]
resuma = { path = "../../crates/resuma" }
resuma-flow = { path = "../../crates/resuma-flow" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio  = { workspace = true }
